Updated institutions for CSV Paper + updated .gitignore

--- a/plugins/vdm2isa/pub/csv-lib/main.tex
+++ b/plugins/vdm2isa/pub/csv-lib/main.tex
@@ -187,14 +187,16 @@ pdfstartview=Fit
 %\titlerunning{Short Title}
 
 %Multiple institutes are typeset as follows:
-\author{Leo Freitas \and Aaron John Buhagiar
+\author{Leo Freitas\inst{1} \and Aaron John Buhagiar\inst{2}
 }
 %If there are too many authors, use \authorrunning
 % \authorrunning{First Author et al.}
 \authorrunning{ }
 
 \institute{School of Computing, Newcastle University, \\
-\email{\{leo.freitas, A.J.Buhagiar2@\}@newcastle.ac.uk}
+\email {leo.freitas@newcastle.ac.uk}\\
+\and Translational and Clinical Research Institute, Newcastle University\\
+\email{a.j.Buhagiar2@newcastle.ac.uk}
 }
 			
 \maketitle
