--- a/plugins/vdm2isa/pub/csv-lib/main.tex
+++ b/plugins/vdm2isa/pub/csv-lib/main.tex
@@ -196,7 +196,7 @@ pdfstartview=Fit
 \institute{School of Computing, Newcastle University, \\
 \email {leo.freitas@newcastle.ac.uk}\\
 \and Translational and Clinical Research Institute, Newcastle University\\
-\email{a.j.Buhagiar2@newcastle.ac.uk}
+\email{a.j.buhagiar2@newcastle.ac.uk}
 }
 			
 \maketitle
