Minor title update

--- a/plugins/vdm2isa/pub/csv-lib/main.tex
+++ b/plugins/vdm2isa/pub/csv-lib/main.tex
@@ -182,7 +182,7 @@ pdfstartview=Fit
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{Specification-based CSV support in VDM}
+\title{Specification-based CSV Support in VDM}
 %If Title is too long, use \titlerunning
 %\titlerunning{Short Title}
 
