change of tex files for arxiv submission needs.

--- a/plugins/vdm2isa/pub/sorting/main.tex
+++ b/plugins/vdm2isa/pub/sorting/main.tex
@@ -1,4 +1,3 @@
-%!TEX-program=pdflatexmk
 %"runningheads" enables:
 %  - page number on page 2 onwards
 %  - title/authors on even/odd pages
@@ -140,7 +139,24 @@ pdfstartview=Fit
 
 % Glossaries and Acronyms
 \usepackage[acronym]{glossaries} 
-\input{acronyms}
+%\input{acronyms}
+\newacronym{ast}{AST}{Abstract Syntax Tree}
+\newacronym{ct}{CT}{Combinatorial Testing}
+\newacronym{czt}{CZT}{Community Z Tools}
+\newacronym{dap}{DAP}{Debug Adapter Protocol}
+\newacronym{dbgp}{DBGP}{Common DeBugGer Protocol}
+\newacronym{gui}{GUI}{Graphical User Interface}
+\newacronym{ide}{IDE}{Integrated Development Environment}
+\newacronym{lsp}{LSP}{Language Server Protocol}
+\newacronym{poc}{PoC}{Proof of Concept}
+\newacronym{pog}{POG}{Proof Obligation Generation}
+\newacronym{po}{PO}{Proof Obligation}
+\newacronym{slsp}{SLSP}{Specification Language Server Protocol}
+\newacronym{vdm}{VDM}{Vienna Development Method}
+\newacronym{vscode}{VS Code}{Visual Studio Code}
+\newacronym{CSV}{CSV}{Comma Separated Values}
+\newacronym{ISQ}{ISQ}{International System of Quantities}
+
 % \makeglossaries   % Include to be able to print a glossary list
 % \usepackage{acronym}
 % \input{acronyms}
